--- a/app/package.json
+++ b/app/package.json
@@ -10,11 +10,20 @@
   },
   "dependencies": {
     "@prisma/client": "^6.3.0",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@types/bcryptjs": "^2.4.6",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "next-auth": "^4.24.11",
     "prisma": "^6.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7",
     "youtube-search-api": "^1.2.2",
     "zod": "^3.24.1"
   },
